force-app/main/default/objects/HR_Assessment__c/HR_Assessment__c.object-meta.xml
<CustomObject>
    <description>Main object for the HR Assessment that will be a child to Client Success Manager.</description>
    <label>HR Assessment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HR Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Assessment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>