force-app/main/default/objects/HR_Assessment__c/fields/ASO_PIA_clients_BalanceCare__c.field-meta.xml
<CustomField>
    <fullName>ASO_PIA_clients_BalanceCare__c</fullName>
    <inlineHelpText>ASO PIA Clients:  Are you and your employees familiar with the benefits provided through the BalanceCare (Health Advocacy) Program?</inlineHelpText>
    <label>ASO/PIA clients: BalanceCare?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>