force-app/main/default/objects/HR_Assessment__c/fields/Compensation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compensation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>