force-app/main/default/objects/HR_Assessment__c/fields/Do_you_conduct_background_checks__c.field-meta.xml
<CustomField>
    <fullName>Do_you_conduct_background_checks__c</fullName>
    <inlineHelpText>Do you conduct post-offer, pre-employment background checks?</inlineHelpText>
    <label>Do you conduct background checks?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>