force-app/main/default/objects/HR_Assessment__c/fields/Do_you_have_an_affirmative_action_plan__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_affirmative_action_plan__c</fullName>
    <inlineHelpText>Do you/Are you required to have an Affirmative Action Plan?</inlineHelpText>
    <label>Do you have an affirmative action plan?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>