force-app/main/default/objects/HR_Assessment__c/fields/Do_you_maintain_employee_files__c.field-meta.xml
<CustomField>
    <fullName>Do_you_maintain_employee_files__c</fullName>
    <inlineHelpText>Does your company maintain employee files for each employee?</inlineHelpText>
    <label>Do you maintain employee files?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>