force-app/main/default/objects/HR_Assessment__c/fields/Employee_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Employee_Turnover__c</fullName>
    <inlineHelpText>Are you comfortable with your company&apos;s current rate of employee turnover?</inlineHelpText>
    <label>Employee Turnover?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>