force-app/main/default/objects/HR_Assessment__c/fields/Familiar_with_FLSA_and_others__c.field-meta.xml
<CustomField>
    <fullName>Familiar_with_FLSA_and_others__c</fullName>
    <inlineHelpText>Are you familiar with the many aspects of the FLSA and similar state laws?</inlineHelpText>
    <label>Familiar with FLSA and others?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>