force-app/main/default/objects/HR_Assessment__c/fields/Have_managers_been_trained__c.field-meta.xml
<CustomField>
    <fullName>Have_managers_been_trained__c</fullName>
    <inlineHelpText>Are supervisors and managers trained on proper hiring practices and fully understand the interview questions that could expose the company to legal liability?</inlineHelpText>
    <label>Have managers been trained?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>