force-app/main/default/objects/HR_Assessment__c/fields/Have_managers_been_trained_on_new_hire_d__c.field-meta.xml
<CustomField>
    <fullName>Have_managers_been_trained_on_new_hire_d__c</fullName>
    <inlineHelpText>Have the individuals in your company who are responsible for collecting new hire documents been trained?</inlineHelpText>
    <label>Trained on new hire documentation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>