force-app/main/default/objects/HR_Assessment__c/fields/Interns__c.field-meta.xml
<CustomField>
    <fullName>Interns__c</fullName>
    <inlineHelpText>Does your company utilize interns throughout the year?</inlineHelpText>
    <label>Interns?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>