force-app/main/default/objects/HR_Assessment__c/fields/Minimum_wage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_wage__c</fullName>
    <inlineHelpText>Are all non-exempt employees paid at least the applicable minimum wage?					Minimum wage?</inlineHelpText>
    <label>Minimum wage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>