force-app/main/default/objects/HR_Assessment__c/fields/Recruiting_Interview_and_Selection_Note__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Interview_and_Selection_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recruiting, Interview and Selection Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>