force-app/main/default/objects/HR_Assessment__c/fields/Reference_check_requests__c.field-meta.xml
<CustomField>
    <fullName>Reference_check_requests__c</fullName>
    <inlineHelpText>Is one person responsible for responding to reference check requests? Has that person been trained?</inlineHelpText>
    <label>Reference check requests?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>