force-app/main/default/objects/HR_Assessment__c/fields/Training_for_HR_Online__c.field-meta.xml
<CustomField>
    <fullName>Training_for_HR_Online__c</fullName>
    <inlineHelpText>(HRO) If yes above, would you like to receive more training on any features?  If no above, are you interested in setup and use of HRO?</inlineHelpText>
    <label>Training for HR Online?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>