force-app/main/default/objects/HR_Assessment__c/fields/What_does_you_onboarding_process_look_li__c.field-meta.xml
<CustomField>
    <fullName>What_does_you_onboarding_process_look_li__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is your process for on-boarding new employees?</inlineHelpText>
    <label>Onboarding process?</label>
    <type>TextArea</type>
</CustomField>