force-app/main/default/objects/HR_Assessment__c/fields/What_is_your_hiring_process__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_hiring_process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is your process for interviewing and selecting new employees?</inlineHelpText>
    <label>What is your hiring process?</label>
    <type>TextArea</type>
</CustomField>