force-app/main/default/objects/HR_Assessment__c/fields/Within_3_days_of_start__c.field-meta.xml
<CustomField>
    <fullName>Within_3_days_of_start__c</fullName>
    <inlineHelpText>Are current I-9 forms completed within 3 days of hire by a company representative?</inlineHelpText>
    <label>Within 3 days of start?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>