force-app/main/default/objects/HR_Assessment__c/fields/Workplace_Investigations__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Investigations__c</fullName>
    <inlineHelpText>Have you identified a point person who is responsible for conducting workplace investigations and has that person been trained?</inlineHelpText>
    <label>Investigations person?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>