force-app/main/default/objects/HR_Assessment__c/recordTypes/HR_Assessment_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HR_Assessment_Record_Type</fullName>
    <active>true</active>
    <label>HR Assessment Record Type</label>
</RecordType>